--- a/app/src/main/res/layout/place_info_row.xml
+++ b/app/src/main/res/layout/place_info_row.xml
@@ -1,26 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"  android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <TextView
-        android:layout_width="wrap_content"
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+
         android:layout_height="wrap_content"
+        android:background="#B3E5FC"
+        card_view:cardUseCompatPadding="true"
+        card_view:cardCornerRadius="35dp"
+        card_view:cardElevation="8dp"
+        card_view:contentPadding="58dp"
+        card_view:cardBackgroundColor="#536DFE"
+
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+
+            >
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/place_title"
-        android:textColor="#483D8B"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:fontFamily="monospace"
-        android:textSize="20dp"
+        android:textSize="35dp"
         android:gravity="right"
         />
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/longLat"
+        android:textAlignment="center"
 
-        android:textColor="#483D8B"
-        android:textSize="15dp"
+        android:textColor="#ffffff"
+        android:textSize="35dp"
+
         android:gravity="left"
         android:textStyle="italic"
         />
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
